Some xof algo name casing fixes
Fixes the casing for some TupleHash/ParallelHash algorithms

--- a/src/xof/sections/03-supported.adoc
+++ b/src/xof/sections/03-supported.adoc
@@ -6,10 +6,10 @@ The following XOFs may be advertised by this ACVP compliant crypto module:
 
 * cSHAKE-128
 * cSHAKE-256
-* parallelHash-128
-* parallelHash-256
-* tupleHash-128
-* tupleHash-256
+* ParallelHash-128
+* ParallelHash-256
+* TupleHash-128
+* TupleHash-256
 * KMAC-128
 * KMAC-256
 
