several more xof casing fixes
updates several "CSHAKE" to "cSHAKE"

--- a/src/xof/sections/97-examples.adoc
+++ b/src/xof/sections/97-examples.adoc
@@ -9,7 +9,7 @@ The following is an example JSON object advertising support for cSHAKE-128.
 [source, json]
 ----
 {
-  "algorithm": "CSHAKE-128",
+  "algorithm": "cSHAKE-128",
   "revision": "1.0",
   "hexCustomization": false,
   "outputLen": [
@@ -138,7 +138,7 @@ The following is an example JSON object for cSHAKE test vectors sent from the AC
 { "acvVersion": <acvp-version> },
 {
   "vsId": 0,
-  "algorithm": "CSHAKE-128",
+  "algorithm": "cSHAKE-128",
   "revision": "1.0",
   "testGroups": [
     {
@@ -380,7 +380,7 @@ The following is an example JSON object for cSHAKE test results sent from the cr
 { "acvVersion": <acvp-version> },
 {
   "vsId": 0,
-  "algorithm": "CSHAKE-128",
+  "algorithm": "cSHAKE-128",
   "revision": "1.0",
   "testGroups": [
     {
