Corrects units of ParallelHash blockSize
Corrects the units of blockSize for ParallelHash from bits to bytes.

Closes #1344

--- a/src/xof/sections/05-capabilities.adoc
+++ b/src/xof/sections/05-capabilities.adoc
@@ -24,7 +24,7 @@ Each algorithm capability advertised is a self-contained JSON object.  The follo
 | outputLen | Output length for the XOF | domain
 | keyLen | Supported key lengths | domain
 | macLen | Supported MAC lengths | domain
-| blockSize | blockSize (in bits) to be used with ParallelHash | domain
+| blockSize | block size (in bytes) to be used with ParallelHash | domain
 |===
 
 The following grid outlines which properties are *REQUIRED*, as well as all the possible values a server *MAY* support for XOF algorithms:
