cSHAKE, ParallelHash, TupleHash MCT updates
Defines the functions used in the cSHAKE, ParallelHash and TupleHash MCT tests. Clarifies that bit strings used in the MCT tests, when converted to a number, are considered little endian. Adds descriptions of several test group level properties used in MCT tests.

https://github.com/usnistgov/ACVP/issues/1326

--- a/src/xof/sections/04-testtypes.adoc
+++ b/src/xof/sections/04-testtypes.adoc
@@ -50,6 +50,8 @@ MCT(Msg, MaxOutLen, MinOutLen, OutLenIncrement)
 }
 ----
 
+NOTE: For the "Rightmost_Output_bits % Range" operation, the Rightmost_Output_bits bit string should be interpretted as a little endian-encoded number. 
+
 [[ParallelHash-MCT]]
 ==== ParallelHash Monte Carlo Test
 
@@ -84,6 +86,8 @@ MCT(Msg, MaxOutLen, MinOutLen, OutLenIncrement, MaxBlockSize, MinBlockSize)
   return OutputJ;
 }
 ----
+
+NOTE: For the "Rightmost_Output_bits % Range" operation, the Rightmost_Output_bits bit string should be interpretted as a little endian-encoded number. For "Right(Rightmost_Output_bits, 8) % BlockRange", the bit string resulting from the "Right(Rightmost_Output_bits, 8)" operation should be interpretted as a little endian-encoded number.
 
 [[TupleHash-MCT]]
 ==== TupleHash Monte Carlo Test
@@ -123,8 +127,13 @@ MCT(Tuple, MaxOutLen, MinOutLen, OutLenIncrement)
 }
 ----
 
+NOTE: For "Left(workingBits, 3) % 4", the bit string resulting from the "Left(workingBits, 3)" operation should be interpretted as a little endian-encoded number. For the "Rightmost_Output_bits % Range" operation, the Rightmost_Output_bits bit string should be interpretted as a little endian-encoded number.
+
+[xof-mct-functions]
+==== Functions Used in the Monte Carlo Tests for XOFs
+
 [bitsToString]
-==== BitsToString Function
+===== BitsToString Function
 
 [source, code]
 ----
@@ -137,6 +146,18 @@ BitsToString(bits)
   }
 }
 ----
+
+[left-mct-function]
+===== Left() Function
+The function Left(bitString, numberOfBits) returns the leftmost numberOfBits bits of bitString.
+
+[right-mct-function]
+===== Right() Function
+The function Right(bitString, numberOfBits) returns the rightmost numberOfBits bits of bitString.
+
+[zero-mct-function]
+===== ZeroBits() Function
+The function ZeroBits(numberOfBits) returns an all-zero bit string of length numberOfBits bits.
 
 === Test Coverage
 
