--- a/src/xof/sections/06-test-vectors.adoc
+++ b/src/xof/sections/06-test-vectors.adoc
@@ -15,6 +15,11 @@ Test vector sets *MUST* contain one or many test groups, each sharing similar pr
 | xof | Whether or not the group uses the arbitrary output (XOF) version of the algorithm | boolean
 | hexCustomization | Whether or not the group uses customization strings in hex (true) or ASCII (false) | boolean
 | tests | Array of individual test case JSON objects, which are defined in <<tcjs>> | array of testCase objects
+| minOutLen | The minimum outputLen as specified in the capabilities registration (used in monte carlo tests). | integer
+| maxOutLen | The maximum outputLen as specified in the capabilities registration (used in monte carlo tests). | integer
+| outLenIncrement | The outputLen increment as specified in the capabilities registration (used in monte carlo tests). | integer
+| minBlockSize | The minimum blockSize as specified in the capabilities registration (used in ParallelHash monte carlo tests). | integer
+| maxBlockSize | The maximum blockSize as specified in the capabilities registration (used in ParallelHash monte carlo tests). | integer
 |===
 
 [[tcjs]]
