Updates XOF Sample Prompts
Updates XOF sample prompts to include several properties that were missing from the test group level for MCT tests.

--- a/src/xof/sections/97-examples.adoc
+++ b/src/xof/sections/97-examples.adoc
@@ -168,10 +168,13 @@ The following is an example JSON object for cSHAKE test vectors sent from the AC
       "tgId": 2,
       "testType": "MCT",
       "hexCustomization": false,
+      "minOutLen": 256,
+      "maxOutLen": 4096,
+      "outLenIncrement": 1,
       "tests": [
         {
-          "tcId": 251,
-          "msg": "5FB4BAE618DABE000B9FDAB178388671",
+          "tcId": 101,
+          "msg": "EDAF0D79E36F13461FE18B098F77A76B",
           "len": 128,
           "functionName": "",
           "customization": ""
@@ -295,12 +298,19 @@ The following is an example JSON object for ParallelHash test vectors sent from 
       "testType": "MCT",
       "function": "ParallelHash",
       "xof": true,
+      "minBlockSize": 1,
+      "maxBlockSize": 16,
       "hexCustomization": false,
+      "minOutLen": 256,
+      "maxOutLen": 4096,
+      "outLenIncrement": 1,
       "tests": [
         {
-          "tcId": 501,
-          "msg": "5ABA124055F84766A91603B7D1B57243",
-          "len": 128
+          "tcId": 201,
+          "msg": "8A4609316F3BCB102CBBD6428E7E1FC8",
+          "len": 128,
+          "blockSize": 256,
+          "customization": ""
         }
       ]
     }
@@ -350,15 +360,19 @@ The following is an example JSON object for TupleHash test vectors sent from the
       "tgId": 3,
       "testType": "MCT",
       "xof": true,
+      "minOutLen": 256,
+      "maxOutLen": 512,
+      "outLenIncrement": 8,
       "tests": [
         {
-          "tcId": 381,
+          "tcId": 201,
           "tuple": [
-            "B1D95CA98C5AB973C5BB25B1880A67EC1AA78582DBC7877EFDAC53EF31516E0ED0E125A5"
+            ""
           ],
           "len": [
-            288
-          ]
+            0
+          ],
+          "customization": ""
         }
       ]
     }
