Fixes SHAKE MCT description

--- a/src/sha3/sections/04-testtypes.adoc
+++ b/src/sha3/sections/04-testtypes.adoc
@@ -44,7 +44,7 @@ The MCTs start with an initial condition (SEED which is a single message) and pe
 * minOutBytes = smallest number of bytes supported
 * maxOutBytes = largest number of bytes supported
 
-The SHAKE function used in the pseudocode takes in a bitstring and a desired output length in bits. The M[i] input to SHAKE MUST always contain at least 128 bits. If this is not the case as the previous digest was too short, append empty bits to the rightmost side of the digest. The MCT algorithm is shown below.
+The SHAKE function used in the pseudocode takes in a bitstring and a desired output length in bits. The MSG[i] input to SHAKE MUST always contain at least 128 bits. If this is not the case as the previous digest was too short, append empty bits to the rightmost side of the digest. The MCT algorithm is shown below.
 
 .SHAKE Monte Carlo Test
 [source, code]
@@ -57,11 +57,10 @@ For j = 0 to 99
         MSG[i] = 128 leftmost bits of MD[i-1]
         if (MSG[i] < 128 bits)
             Append 0 bits on rightmost side of MSG[i] til MSG[i] is 128 bits
-        MD[i] = SHAKE(M[i], OutputLen * 8)
+        MD[i] = SHAKE(MSG[i], OutputLen * 8)
 
-        if (i != 1000)
-            RightmostOutputBits = 16 rightmost bits of MD[i] as an integer
-            OutputLen = minOutBytes + (RightmostOutputBits % Range)
+        RightmostOutputBits = 16 rightmost bits of MD[i] as an integer
+        OutputLen = minOutBytes + (RightmostOutputBits % Range)
 
     Output MD[1000], OutputLen
     SEED = MD[1000]
