Moved the TestVector Response documentation for multi expansion groups support from OneStep to TwoStep. Based on the 05-capabilities.adoc files for both, and checking through the code, the 07-responses.adocs were just swapped. I moved them to the correct files.

--- a/src/kas/sp800-56c/twostep/sections/07-responses.adoc
+++ b/src/kas/sp800-56c/twostep/sections/07-responses.adoc
@@ -33,6 +33,8 @@ The following table describes the JSON object that represents a test case respon
 | tcId | The test case identifier | integer
 | testPassed | Was the provided `dkm` valid? Only valid for the "VAL" test type. | boolean
 | dkm | The derived keying material. Provided by the IUT for "AFT" test type test cases. | hex
+| dkms | The derived keying materials. Provided by the IUT for "AFT" test type test cases. For multi expansion groups. | array of hex
+
 |===
 
 Here is an abbreviated example of the response
