--- a/src/rsa/sections/07-keygen-responses.adoc
+++ b/src/rsa/sections/07-keygen-responses.adoc
@@ -15,12 +15,12 @@ The following table describes the JSON elements for the response to a RSA / keyG
 | testPassed | the verdict on the prime generation testing for the supplied pRand/qRand combination, see <<FIPS186-4>>, Appendix B.3.3. | boolean
 | seed | the seed used in prime generation according to <<FIPS186-4>>, Appendix B.3.2, B.3.4, or B.3.5 | hex
 | bitlens| the length of p1, p2, q1, and q2 for prime generation according to <<FIPS186-4>>, Appendix B.3.2, B.3.4, B.3.5 or the length of xP1, xP2, xQ1, and xQ2 for B.3.6 | array of integers
-| xP1 | the prime factor p1 for Primes with Conditions - see <<FIPS186-4>>, Appendix B.3.3, B.3.4, or B.3.5, if applicable | hex
-| xP2 | the prime factor p2 for Primes with Conditions - see <<FIPS186-4>>, Appendix B.3.3, B.3.4, or B.3.5, if applicable | hex
+| xP1 | the prime factor p1 for Primes with Conditions - see <<FIPS186-4>>, Appendix B.3.3, B.3.4, B.3.5, or B.3.6, if applicable | hex
+| xP2 | the prime factor p2 for Primes with Conditions - see <<FIPS186-4>>, Appendix B.3.3, B.3.4, B.3.5, or B.3.6, if applicable | hex
 | xP | the random number used in Step 3 of the algorithm in <<FIPS186-4>>, Appendix C.9 to generate the prime P, if applicable | hex
 | p | the private prime factor p | hex
-| xQ1 | the prime factor q1 for Primes with Conditions - see <<FIPS186-4>>, Appendix B.3.3, B.3.4, or B.3.5, if applicable | hex
-| xQ2 | the prime factor q2 for Primes with Conditions - see <<FIPS186-4>>, Appendix B.3.3, B.3.4, or B.3.5, if applicable | hex
+| xQ1 | the prime factor q1 for Primes with Conditions - see <<FIPS186-4>>, Appendix B.3.3, B.3.4, B.3.5, or B.3.6, if applicable | hex
+| xQ2 | the prime factor q2 for Primes with Conditions - see <<FIPS186-4>>, Appendix B.3.3, B.3.4, B.3.5, or B.3.6, if applicable | hex
 | xQ | the random number used in Step 3 of the algorithm in <<FIPS186-4>>, Appendix C.9 to generate the prime Q, if applicable | hex
 | q | the private prime factor q | hex
 | n | the modulus | hex
