Adds KDF-KMAC to list of valid algorithms

--- a/src/kdf/sections/04-testtypes.adoc
+++ b/src/kdf/sections/04-testtypes.adoc
@@ -13,10 +13,10 @@ There is only one test type: functional tests. Each has a specific value to be u
 
 === Test Coverage
 
-The tests described in this document have the intention of ensuring an implementation is conformant to <<SP800-108>>. 
+The tests described in this document have the intention of ensuring an implementation is conformant to <<SP800-108r1>>. 
 
 ==== Requirements Covered ====
-* The ACVP server tests the IUT's ability to derive keying material using the "modes of iteration" defined in sections 5.1, 5.2 and 5.3 of <<SP800-108>>. The server supports testing the IUT against the various MACs or PRFs listed in <<valid-mac>>. It also supports testing varying 1) the location of the counter within the input data, 2) the length of the derived keying material, and 3) the counter length. 
+* The ACVP server tests the IUT's ability to derive keying material using the "modes of iteration" defined in sections 5.1, 5.2 and 5.3 of <<SP800-108r1>>. The server supports testing the IUT against the various MACs or PRFs listed in <<valid-mac>>. It also supports testing varying 1) the location of the counter within the input data, 2) the length of the derived keying material, and 3) the counter length. 
 
 ==== Requirements Not Covered ====
-* The tests described in this document do not validate the construction of the fixed input data string described in <<SP800-108>> Sections 5, 7.5 and 7.6.
+* The tests described in this document do not validate the construction of the fixed input data string described in <<SP800-108r1>> Sections 5, 7.5 and 7.6.
