--- a/src/kdf/sections/03-supported.adoc
+++ b/src/kdf/sections/03-supported.adoc
@@ -5,3 +5,4 @@
 The following key derivation functions *MAY* be advertised by the ACVP compliant cryptographic module:
 
 * KDF / 1.0
+* KDF / KMAC / Sp800-108r1
