--- a/src/kdf/sections/07-responses.adoc
+++ b/src/kdf/sections/07-responses.adoc
@@ -39,8 +39,8 @@ An example of this is the following
 [source, json]
 ----
 {
-	"tgId": 1,
-	"tests": [ ... ]
+    "tgId": 1,
+    "tests": [ ... ]
 }
 ----
 
@@ -59,32 +59,76 @@ and *SHALL* be included for test cases where counterLocation is "middle fixed da
 | keyOut | The outputted keying material or key | hex
 |===
 
-NOTE: the fixedData or fixed input data string that is used by the IUT is needed by the ACVP server to verify that the IUT correctly derived the keying material. The server does not validate the correct construction of the fixed input data string.  For guidance on constructing a valid fixed input data string, please consult <<SP800-108>> Sections 5, 7.5 and 7.6.
+NOTE: the fixedData or fixed input data string that is used by the IUT is needed by the ACVP server to verify that the IUT correctly derived the keying material. The server does not validate the correct construction of the fixed input data string.  For guidance on constructing a valid fixed input data string, please consult <<SP800-108r1>> Sections 5, 7.5 and 7.6.
+
+The following table describes the JSON properties that represent a test case response for "KDF" / "KMAC" / "Sp800-108r1".
+
+.Test Case Results JSON Properties for "KDF" / "KMAC" / "Sp800-108r1"
+|===
+| JSON Property | Description | JSON Type
+
+| tcId | The test case identifier | integer
+| derivedKey | The outputted keying material or key | hex
+|===
 
 === Example Test Vector Response JSON
 
-The following is an abbreviated example of a JSON object for SP800-108 KDF test results sent from the crypto module to the ACVP server.
+The following is an abbreviated example of a JSON object for SP800-108r1 KDF test results sent from the crypto module to the ACVP server.
 
 // [align=left,alt=,type=]
-....
-                        
-[{
-                "acvVersion": <acvp-version>
-        },
-        {
-                "vsId": 1564,
-                "testGroups": [{
-                        "tgId": 1,
-                        "tests": [{
-                                "tcId": 1,
-                                "keyOut": "94D58F22FA9092B0375F7EE6841B6775226703E3232BF9CF496E4EF3CDE1037765DDC060C08C9B3A845E288EED171535EBA97D23DCF8F6D2D4CF9D980CB4F6D270D3A7859B1FE2BFCA81F0702B5767E35BE9B96BA65C5263EB0DECD5FA721FFA57CE208F53F910DB6087E93BEE1A24E790E1DF02C140E89E04DF5299A63B71DA",
-                                "fixedData": "FBF14DF02EE6C7DABCA6EF9AF59BB9A2"
-                        }]
-                }]
-        }
-]
-            
-                    
+....                     
+[
+    {
+        "acvVersion": <acvp-version>
+    },
+    {
+        "vsId": 1564,
+        "testGroups": [
+            {
+                "tgId": 1,
+                "tests": [
+                    {
+                        "tcId": 1,
+                        "keyOut": "94D58F...",
+                        "fixedData": "FBF14DF02EE6C7DABCA6EF9AF59BB9A2"
+                    }
+                ]
+            }
+        ]
+    }
+]                
 ....
 
-NOTE: Please note that the values used in the example JSON object are not real values. In particular, the value for the fixedData property is not an example of a validly formed fixed input data string. 
+NOTE: Please note that the values used in the example JSON object are not real values. In particular, the value for the fixedData property is not an example of a validly formed fixed input data string.
+
+The following is an example of a JSON object for "KDF" / "KMAC" / "Sp800-108r1" test results sent from the crypto module to the ACVP server.
+
+ // [align=left,alt=,type=]
+....                     
+[
+    {
+        "acvVersion": <acvp-version>
+    },
+    {
+        "vsId": 0,
+        "algorithm": "KDF",
+        "mode": "KMAC",
+        "revision": "Sp800-108r1",
+        "testGroups": [
+            {
+                "tgId": 1,
+                "tests": [
+                    {
+                        "tcId": 1,
+                        "derivedKey": "A639..."
+                    },
+                    {
+                        "tcId": 2,
+                        "derivedKey": "A328..."
+                    }
+                ]
+            }
+        ]
+    }
+]                
+....
