--- a/src/kdf/sections/98-references.adoc
+++ b/src/kdf/sections/98-references.adoc
@@ -5,7 +5,7 @@
 * [[[RFC2119,RFC 2119]]]
 * [[[RFC7991,RFC 7991]]]
 * [[[RFC8174,RFC 8174]]]
-* [[[SP800-108,NIST SP 800-108]]]
+* [[[SP800-108r1,NIST SP 800-108r1]]]
 
 [%bibitem]
 === Automatic Cryptographic Validation Protocol
