Adds derivedKeyingMaterialChildLength property

--- a/src/ikev2/sections/05-capabilities.adoc
+++ b/src/ikev2/sections/05-capabilities.adoc
@@ -20,9 +20,12 @@ A registration *SHALL* use these properties
 | initiatorNonceLength | The supported initiator nonce lengths used by the IUT in bits | domain | Min: 64, Max: 2048
 | responderNonceLength | The lengths of data the IUT supports in bits | domain | Min: 64, Max: 2048
 | diffieHellmanSharedSecretLength | The lengths of Diffie Hellman shared secrets the IUT supports in bits | domain | Min: 224, Max: 8192
-| derivedKeyingMaterialLength | The lengths of derived key material the IUT supports in bits | domain | Min: 160, Max: 16384
+| derivedKeyingMaterialLength | The lengths of the IKE SA derived keying material the IUT supports in bits | domain | Min: 160, Max: 16384
+| derivedKeyingMaterialChildLength | The lengths of the CHILD SA derived keying material the IUT supports in bits | domain | Min: 160, Max: 16384
 | hashAlg | Valid hash algorithms used by the IUT | array | See <<valid-sha>>
 |===
+
+NOTE: if a derivedKeyingMaterialChildLength is not provided, derivedKeyingMaterialLength will be assumed to equal derivedKeyingMaterialChildLength.
 
 An example registration within an algorithm capability exchange looks like this
 
