adds the rest of KDF-KMAC

--- a/src/kdf/sections/98-references.adoc
+++ b/src/kdf/sections/98-references.adoc
@@ -6,6 +6,7 @@
 * [[[RFC7991,RFC 7991]]]
 * [[[RFC8174,RFC 8174]]]
 * [[[SP800-108,NIST SP 800-108]]]
+* [[[SP800-108r1,NIST SP 800-108r1]]]
 
 [%bibitem]
 === Automatic Cryptographic Validation Protocol
