updates dkm description

--- a/src/kas/sp800-56c/hkdf/sections/06-test-vectors.adoc
+++ b/src/kas/sp800-56c/hkdf/sections/06-test-vectors.adoc
@@ -61,7 +61,7 @@ Each test group contains an array of one or more test cases. Each test case is a
 | JSON Value | Description | JSON Type
 
 | tcId | Numeric identifier for the test case, unique across the entire vector set. | integer
-|dkm | Value for VAL tests. | hex
+| dkm | Derived keying material value for VAL tests. | hex
 | kdfParameter | Object representing inputs into the KDA for single expansion tests. | See <<kdfParameter>>.
 | fixedInfoPartyU | Fixed information specific to party U for single expansion tests. | See <<fixedInfo>>.
 | fixedInfoPartyV | Fixed information specific to party V for single expansion tests. | See <<fixedInfo>>.
