Updates IKEv2 spec for addition of derivedKeyingMaterialChildLength registration capability property
Adds the derivedKeyingMaterialChildLength registration property to IKEv2 KDF. The addition of this optional property allows derivedKeyingMaterialChildLength != derivedKeyingMaterialLength. If derivedKeyingMaterialChildLength is not supplied as part of the registration, derivedKeyingMaterialChildLength will be set equal to derivedKeyingMaterialLength.

Adds the derivedKeyingMaterialChildLength property to the test group level of the prompt file. This property applies to the derivedKeyingMaterialChild and derivedKeyingMaterialDh test case properties of the response.

Updates several property definitions to include the terms used in RFC 7296 for increased clarity.

https://github.com/usnistgov/ACVP/issues/1357

--- a/src/ikev2/sections/06-test-vectors.adoc
+++ b/src/ikev2/sections/06-test-vectors.adoc
@@ -10,10 +10,11 @@ The testGroups element at the top level in the test vector JSON object is an arr
 | tgId | Test group identifier | integer
 | testType | Test operations to be performed | string
 | hashAlg | The SHA type used for the test vectors | string
-| nInitLength | Length of initiator nonce in bits | hex
-| nRespLength | Length of responder nonce in bits | hex
-| derivedKeyingMaterialLength | Derived Key Matrerial length expected in bits | integer
-| dhLength | Diffie Hellman shared secret length in bits | integer
+| nInitLength | Length of initiator nonce, Ni, in bits | hex
+| nRespLength | Length of responder nonce, Nr, in bits | hex
+| derivedKeyingMaterialLength | IKE SA Derived Keying Material length expected in bits. Applies to the derivedKeyingMaterial property in <<test_case_results_table>> | integer
+| derivedKeyingMaterialChildLength | CHILD SA Derived Keying Material length expected in bits. Applies to the derivedKeyingMaterialChild and derivedKeyingMaterialDh properties in <<test_case_results_table>> | integer
+| dhLength | Diffie Hellman shared secret length, g^ir, in bits | integer
 | tests | Array of individual test cases | array
 |===
 
@@ -28,12 +29,12 @@ Each test group contains an array of one or more test cases. Each test case is a
 | JSON Value | Description | JSON Type
 
 | tcId | Test case idenfitier | integer
-| nInit | Value of the initiator nonce | hex
-| nResp | Value of the responder nonce | hex
-| gir | Diffie-Hellman shared secret | hex
-| girNew | New Diffie-Hellman shared secret | hex
-| spiInit | security parameter indice of the initiator | hex
-| spiResp | security parameter indice of the responder | hex
+| nInit | Value of the initiator nonce, Ni | hex
+| nResp | Value of the responder nonce, Nr | hex
+| gir | Diffie-Hellman shared secret, g^ir | hex
+| girNew | New Diffie-Hellman shared secret, g^ir new | hex
+| spiInit | security parameter indice of the initiator, SPIi | hex
+| spiResp | security parameter indice of the responder, SPIr | hex
 |===
 
 Here is an abbreviated yet fully constructed example of the prompt.
@@ -53,6 +54,7 @@ Here is an abbreviated yet fully constructed example of the prompt.
       "nInitLength": 64,
       "nRespLength": 2048,
       "derivedKeyingMaterialLength": 16384,
+      "derivedKeyingMaterialChildLength": 16384,
       "testType": "AFT",
       "tests": [
         {
