--- a/src/ikev2/sections/07-responses.adoc
+++ b/src/ikev2/sections/07-responses.adoc
@@ -46,16 +46,17 @@ An example of this is the following
 
 The following table describes the JSON object that represents a test case response for a {spec-algorithm}.
 
+[[test_case_results_table]]
 .Test Case Results JSON Object
 |===
 | JSON Value | Description | JSON Type
 
 | tcId | The test case identifier | integer
-| sKeySeed | Results of the extraction step | hex
-| sKeySeedReKey | Results of the newly created skeyid | hex
+| sKeySeed | Results of the extraction step, SKEYSEED | hex
+| sKeySeedReKey | The SKEYSEED value created when using the CREATE_CHILD_SA exchange to rekey an existing IKE SA | hex
 | derivedKeyingMaterial | Derived key Material from expansion step  | hex
-| derivedKeyingMaterialChild | Expansion step results for child SA | hex
-| derivedKeyingMaterialDh | Expansion step results for child SA DH | hex
+| derivedKeyingMaterialChild | Expansion step results for CHILD SA | hex
+| derivedKeyingMaterialDh | Expansion step results for CHILD SA DH | hex
 |===
 
 Here is an abbreviated example of the response
