--- a/src/ikev2/sections/97-examples.adoc
+++ b/src/ikev2/sections/97-examples.adoc
@@ -88,6 +88,7 @@ The following is a example JSON object for SP800-135 IKEv2 KDF test vectors sent
                 "nRespLength": 64,
                 "dhLength": 8192,
                 "derivedKeyingMaterialLength": 512,
+                "derivedKeyingMaterialChildLength": 512,
                 "tests": [
                     {
                         "tcId": 1,
