--- a/src/ikev2/sections/03-supported.adoc
+++ b/src/ikev2/sections/03-supported.adoc
@@ -4,4 +4,4 @@
 
 The following key derivation functions *MAY* be advertised by the ACVP compliant cryptographic module:
 
-* kdf-components / ikev2
+* kdf-components / ikev2 / 1.0
