Updated the MCT's to show that the Output was reused to begin each new iteration.

--- a/src/xof/sections/04-testtypes.adoc
+++ b/src/xof/sections/04-testtypes.adoc
@@ -43,6 +43,7 @@ MCT(Msg, MaxOutLen, MinOutLen, OutLenIncrement)
       Customization = BitsToString(InnerMsg || Rightmost_Output_bits);
     }
 
+    Output[0] = Output[1000];
     OutputJ[j] = Output[1000];
   }
 
@@ -80,6 +81,7 @@ MCT(Msg, MaxOutLen, MinOutLen, OutLenIncrement, MaxBlockSize, MinBlockSize)
       Customization = BitsToString(InnerMsg || Rightmost_Output_bits);
     }
   
+    Output[0] = Output[1000];
     OutputJ[j] = Output[1000];
   }
 
