--- a/src/xof/sections/04-testtypes.adoc
+++ b/src/xof/sections/04-testtypes.adoc
@@ -44,6 +44,7 @@ MCT(Msg, MaxOutLen, MinOutLen, OutLenIncrement)
     }
 
     OutputJ[j] = Output[1000];
+    Output[i] = Output[1000];
   }
 
   return OutputJ;
@@ -81,6 +82,7 @@ MCT(Msg, MaxOutLen, MinOutLen, OutLenIncrement, MaxBlockSize, MinBlockSize)
     }
   
     OutputJ[j] = Output[1000];
+    Output[i] = Output[1000];
   }
 
   return OutputJ;
