--- a/src/drbg/sections/03-supported.adoc
+++ b/src/drbg/sections/03-supported.adoc
@@ -35,7 +35,7 @@ DRBG minimum/maximum values for several options such as minimum entropy and nonc
 [[supported_values]]
 .Supported DRBG Values
 |===
-| DRBG Algorithm | Mode | Derivation Function | Security Strength | Min Entropy | Max Entropy | Max PersoString | Max Addl String | Min Nonce
+| DRBG Algorithm | Mode | Derivation Function | Max Security Strength | Min Entropy Len | Max Entropy Len | Max PersoString | Max Addl String | Min Nonce Len
 
 | Counter | AES128 | TRUE | 128 | 128 | 65536 | 65536 | 65536 | 64
 | Counter | AES192 | TRUE | 192 | 192 | 65536 | 65536 | 65536 | 96
@@ -45,13 +45,13 @@ DRBG minimum/maximum values for several options such as minimum entropy and nonc
 | Counter | AES192 | FALSE | 192 | 320 | 320 | 320 | 320 | 0
 | Counter | AES256 | FALSE | 256 | 384 | 384 | 384 | 384 | 0
 | Counter | TDES | FALSE | 112 | 232 | 232 | 232 | 232 | 0
-| Hash | SHA1 | N/A | 80 | 80 | 65536 | 65536 | 65536 | 40
-| Hash | SHA2-224 | N/A | 112| 112 | 65536 | 65536 | 65536 | 56
-| Hash | SHA2-256 | N/A | 128| 128 | 65536 | 65536 | 65536 | 64
-| Hash | SHA2-384 | N/A | 192| 192 | 65536 | 65536 | 65536 | 96
+| Hash | SHA1 | N/A | 128 | 128 | 65536 | 65536 | 65536 | 64
+| Hash | SHA2-224 | N/A | 192| 192 | 65536 | 65536 | 65536 | 96
+| Hash | SHA2-256 | N/A | 256| 256 | 65536 | 65536 | 65536 | 128
+| Hash | SHA2-384 | N/A | 256| 256 | 65536 | 65536 | 65536 | 128
 | Hash | SHA2-512 | N/A | 256| 256 | 65536 | 65536 | 65536 | 128
-| Hash | SHA2-512/224 | N/A | 112 | 112 | 65536 | 65536 | 65536 | 56
-| Hash | SHA2-512/256 | N/A | 128 | 128 | 65536 | 65536 | 65536 | 64
+| Hash | SHA2-512/224 | N/A | 192 | 192 | 65536 | 65536 | 65536 | 96
+| Hash | SHA2-512/256 | N/A | 256 | 256 | 65536 | 65536 | 65536 | 128
 | Hmac | SHA1 | N/A | 128 | 128 | 65536 | 65536 | 65536 | 64
 | Hmac | SHA2-224 | N/A | 192 | 192 | 65536 | 65536 | 65536 | 96
 | Hmac | SHA2-256 | N/A | 256 | 256 | 65536 | 65536 | 65536 | 128
